# yukiscript

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
example_scripts/: fibonacchi.yuki  gcd.yuki  pgcd.yuki  prime.yuki
src/: CMakeLists.txt
src/interpreter/: CMakeLists.txt  main.cpp
src/yuki_script/: CMakeLists.txt
src/yuki_script/context/: CMakeLists.txt  context.cpp  context.hpp  context_stack.cpp  context_stack.hpp
src/yuki_script/generators/: CMakeLists.txt  control_generators.cpp  control_generators.hpp  function_generators.cpp  function_generators.hpp  generators.cpp  generators.hpp  op_generators.cpp  op_generators.hpp  token_utils.cpp  token_utils.hpp  var_generators.cpp  var_generators.hpp
src/yuki_script/statements/: CMakeLists.txt  binary_op_stmts.cpp  binary_op_stmts.hpp  control_stmts.cpp  control_stmts.hpp  function_stmts.cpp  function_stmts.hpp  stmts.cpp  stmts.hpp  unary_op_stmts.cpp  unary_op_stmts.hpp  var_stmts.cpp  var_stmts.hpp
src/yuki_script/type_support/: CMakeLists.txt  addition_support.hpp  bool_cast_support.hpp  comparaison_support.hpp  division_support.hpp  modulo_support.hpp  multiplication_support.hpp  substraction_support.hpp  type_support.hpp  variable.cpp  variable.hpp
src/yuki_script/utils/: CMakeLists.txt  log.cpp  log.hpp  token_utils.cpp  token_utils.hpp  utils.cpp  utils.hpp
